added/adjusted divs to format home page layout
Co-authored-by: Kelvin Van <90666201+KelvinVan1@users.noreply.github.com>
Co-authored-by: James Howat <97859901+jbhowat@users.noreply.github.com>
Co-authored-by: Ed Cho <106274379+edcho720@users.noreply.github.com>
Co-authored-by: Yufa Li <112290188+01001101CK@users.noreply.github.com>
Co-authored-by: Hashim Farah <70618821+Hashim-21@users.noreply.github.com>

--- a/client/view/style.scss
+++ b/client/view/style.scss
@@ -2,3 +2,32 @@
     display: box;
     box-sizing: border-box;
 }
+
+#midContainer {
+  border: 1px solid red;
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.addSubForm {
+  border: 1px solid green;
+  display: grid;
+  grid-template-columns: auto;
+}
+
+#summary {
+  border: 1px solid purple
+}
+
+#welcome {
+  border: 1px solid orange
+}
+
+#cardContainer {
+  border: 1px solid blue;
+  display: flex;
+}
+
+#subCard {
+  border: 1px solid pink;
+}
