basic working login form complete
Co-authored-by: Kelvin Van <90666201+KelvinVan1@users.noreply.github.com>
Co-authored-by: James Howat <97859901+jbhowat@users.noreply.github.com>
Co-authored-by: Ed Cho <106274379+edcho720@users.noreply.github.com>
Co-authored-by: Yufa Li <112290188+01001101CK@users.noreply.github.com>
Co-authored-by: Hashim Farah <70618821+Hashim-21@users.noreply.github.com>

--- a/client/view/style.scss
+++ b/client/view/style.scss
@@ -31,3 +31,16 @@
 #subCard {
   border: 1px solid pink;
 }
+
+#login {
+  justify-content: center;
+  display:flex;
+}
+
+.loginForm {
+  display: grid;
+  grid-template-columns: auto;
+  justify-content: center;
+  border: 1px solid green;
+
+}
