--- a/client/view/style.scss
+++ b/client/view/style.scss
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+}
 .loginForm {
     display: box;
     box-sizing: border-box;
@@ -43,4 +47,81 @@
   justify-content: center;
   border: 1px solid green;
 
+}
+.base-container {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #cff4d2;
+}
+
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center ;
+  }
+    .form {
+      margin-top: 2em;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border: 1px solid #cff4d2;
+   
+    }
+      .form-group {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      
+        
+      }
+        label {
+          display: block;
+          font-size: 0.875rem;
+          margin-bottom: 0.5rem;
+          text-transform: capitalize;
+          letter-spacing: 1px;
+          
+        }
+        input {
+          margin-top: 6px;
+          min-width: 18em;
+          padding: 0px 10px;
+          font-size: 16px;
+          font-family: "Open Sans", sans-serif;
+          border-radius: 4px;
+          margin-bottom: 31px;
+          transition: all 250ms ease-in-out;
+          letter-spacing: 1px;
+          height: 35px;
+          margin-bottom: 0.5rem;
+          text-transform: capitalize;
+          border: 0
+        }
+          &:focus {
+            outline: none;
+            box-shadow: 0px 0px 12px 0.8px #3474dbb2;
+          }
+     
+
+
+
+
+#signupButton {
+  width: 40%;
+  height: 3em;
+  background-color: rgb(32, 177, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+  border-radius: 0.25em;
+  cursor: pointer;
+  border: transparent;
+  color: fff;
 }
