fixed background cutoff I think finally
Co-authored-by: Kelvin Van <90666201+KelvinVan1@users.noreply.github.com>
Co-authored-by: James Howat <97859901+jbhowat@users.noreply.github.com>
Co-authored-by: Ed Cho <106274379+edcho720@users.noreply.github.com>
Co-authored-by: Yufa Li <112290188+01001101CK@users.noreply.github.com>
Co-authored-by: Hashim Farah <70618821+Hashim-21@users.noreply.github.com>

--- a/client/view/style.scss
+++ b/client/view/style.scss
@@ -1,6 +1,7 @@
 *{
   box-sizing: border-box;
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 
@@ -47,7 +48,7 @@
 
 }
 .base-container {
-  height: 100%;
+  height: 200vh;
   width: 100%;
   display: flex;
   flex-direction: column;
