--- a/client/view/style.scss
+++ b/client/view/style.scss
@@ -1,19 +1,26 @@
-@media screen and (max-width: 1300px) and (min-width: 75em) {
-  html {
-    font-size: 1.5vw;
-  }
-}
-
 * {
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+
+}
+
+body{
+  background-color: #cff4d2;
+}
+
+.all-cards{
+  display: flex;
+ 
+flex-direction: column;  
+justify-content: center;
+  align-items: center;
 }
 
 
 #midContainer {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto;
 }
 
 .addSubForm {
@@ -23,7 +30,8 @@
 }
 
 #summary {
-  border: 1px solid purple
+  border: 1px solid purple;
+  margin-top: 10px;
 }
 
 #welcome {
@@ -54,7 +62,6 @@
 }
 
 .base-container {
-  height: 200vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -98,7 +105,12 @@
 }
 
 .displayContainer {
-  background-color: #7be495;
+  background-color: #cff4d2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 label {
@@ -154,11 +166,16 @@ input:focus {
 
 .addSubForm {
   border: 1px solid #329d9c;
-  background-color: #329d9c;
+  background-color: #205072;
   color: white;
   display: grid;
   grid-template-columns: auto;
   border: 1px solid black;
+  margin-bottom: 10px;
+  padding: 20px;
+  input {
+    size: 70%;
+  }
 }
 
 ::placeholder {
@@ -166,25 +183,74 @@ input:focus {
 }
 
 #AddCardButton {
-  background-color: #205072;
   color: white;
+  max-width: 100%;
+  height: 3em;
+  background-color: #0A8085;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+  border-radius: 0.25em;
   cursor: pointer;
+  border: transparent;
+  justify-self: center;
+  padding: 20px;
+
+
+  
 }
 
 #categoryselect {
+  margin-top: 0px;
+  min-width: 18em;
+  padding: 0px 10px;
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  border-radius: 4px;
+  transition: all 250ms ease-in-out;
+  letter-spacing: 1px;
+  height: 36px;
+  margin-bottom: 1rem;
   color: #329d9c;
+ 
 }
 
 .displayBox {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  padding: 5px;
-  width: 30%;
+  width: 70%;
   margin: 5px 5px 13px 10px;
   float: left;
   font-size: 1em;
-  box-shadow: 5px 5px 15px #329d9c;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px #205072;
   cursor: pointer;
+  overflow-wrap: break-word;
+  padding: 10px;
+  background: #7be495;
+
+  p {
+    padding: 5px;
+  }
+}
+
+.displayBox-summ {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 70%;
+  line-height: 1.8em;
+  margin: 15px 5px 13px 10px;
+  padding: 10px;
+  border-radius: 5px;
+  float: left;
+  font-size: 1em;
+  box-shadow: 5px 5px 10px #205072;
+  cursor: pointer;
+  overflow-wrap: break-word;
+  background: #7be495;
 
   p {
     padding: 5px;
@@ -218,4 +284,10 @@ input:focus {
 #sign-butt{
   text-decoration: none;
   color: white;
+}
+
+@media screen and (max-width: 520px) and (min-width: 375px) {
+  html {
+    font-size: 20px;
+  }
 }
