--- a/client/view/style.scss
+++ b/client/view/style.scss
@@ -5,7 +5,7 @@
 }
 
 body{
-  background-color: #cff4d2;
+  background-color: #00061a;
 }
 
 #AddCardButton {
@@ -47,17 +47,19 @@ body{
 
 .base-container {
   width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  background-color: #cff4d2;
+  flex-direction: column;
+  background-color: #040917;
+  position: absolute;
 }
 
 .button {
   color: white;
   width: 40%;
   height: 3em;
-  background-color: #0A8085;
+  background-color: #13C0BE;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,6 +68,8 @@ body{
   cursor: pointer;
   border: transparent;
   justify-self: center;
+  box-shadow: 2px 2px 5px #0a8084;
+  text-shadow: .5px .3px 1px #00061a;
 }
 
 .button-container {
@@ -99,12 +103,13 @@ body{
   height: auto;
   align-items: center;
   justify-content: center;
-  border-radius: 5px;
   padding: 10px;
-  background-color: #7be495;
-  box-shadow: 5px 5px 10px #205072;
-  margin-top: 2.5rem;
+  background-color: #e67817;
+  box-shadow: 5px 5px 10px #763c0a;
+  margin-top: 25%;
   transition: transform 1s;
+  width: 100%;
+
 }
 
 .content:hover {
@@ -113,7 +118,7 @@ body{
 }
 
 .displayContainer {
-  background-color: #cff4d2;
+  background-color: #00061a;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -147,21 +152,58 @@ body{
 }
 
 .displayBox {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  width: 70%;
-  margin: 5px 5px 13px 10px;
-  float: left;
-  font-size: 1em;
-  border-radius: 5px;
-  box-shadow: 5px 5px 10px #205072;
-  cursor: pointer;
-  overflow-wrap: break-word;
-  padding: 10px;
-  background: #7be495;
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
+  perspective: 1000px;
+  margin: 10px;
+
   p {
     padding: 5px;
   }
+}
+
+.displayBox-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  margin: 5%;
+  border-radius: 10px;
+}
+
+.displayBox:hover .displayBox-inner {
+  transform: rotateY(180deg);
+}
+
+.displayBox-inner:hover .displayBox {
+  transform: rotateY(180deg);
+}
+
+.displayBox-front, .displayBox-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  line-height: 2em;
+  backface-visibility: hidden;
+}
+
+.displayBox-front {
+  background-color: #7be495;
+  color: black;
+}
+
+.displayBox-back {
+  background-color: #7be495;
+  color: black;
+  transform: rotateY(180deg);
 }
 
 .form {
@@ -174,6 +216,12 @@ body{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+#home-logo {
+  width: 80%;
+  padding: 5px;
+  height: auto;
 }
 
 input {
@@ -215,8 +263,26 @@ label {
   padding-top: 1.0rem;
 }
 
+#login-text {
+  text-transform: uppercase;
+  font-size: 110%;
+  position: relative;
+  left: -5%;
+  color: #162040;
+}
+
+#logocontainer {
+  background-color: #040917;
+  width: 30%;
+}
+
 .logoimage {
   margin-top: 1.5rem;
+  height: auto;
+  width: 40%;
+  position: relative;
+  left: 26%;
+  top: 20%;
 }
 
 ::placeholder {
@@ -226,6 +292,17 @@ label {
 #midContainer {
   display: grid;
   grid-template-columns: auto;
+}
+
+#profile-pic {
+  width: 13%;
+  height: auto;
+  border-radius: 50%;
+  background-size: cover;
+  margin-right: 10px;
+  position: absolute;
+  right: px;
+  top: 12px;
 }
 
 #signup-box{
@@ -256,8 +333,26 @@ label {
   margin-top: 10px;
 }
 
+#topcontainer {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 20%;
+  background-color: #040917;
+  margin-top: 5px;
+}
+
 #welcome {
   border: 1px solid orange
+}
+
+#welcome-container {
+  display: flex;
+  justify-content: right;
+  margin-right: 4%;
+  flex-direction: row;
+  width: 70%;
+  height: 100%;
 }
 
 @media screen and (max-width: 520px) and (min-width: 375px) {
