--- a/client/view/style.scss
+++ b/client/view/style.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+  font-family: 'Cantarell', sans-serif;
 }
 
 body{
@@ -12,7 +13,7 @@ body{
   color: white;
   max-width: 100%;
   height: 3em;
-  background-color: #0A8085;
+  background-color:#F57D15;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,20 +23,35 @@ body{
   border: transparent;
   justify-self: center;
   padding: 20px;
+  margin-top: 1.1em;
 }
 
 .addSubForm {
-  border: 1px solid #329d9c;
-  background-color: #205072;
-  color: white;
+  background-color: #010614;
+  color:white;
   display: grid;
   grid-template-columns: auto;
-  border: 1px solid black;
   margin-bottom: 10px;
   padding: 20px;
   input {
     size: 70%;
   }
+}
+
+.addSubForm > input {
+  background-color: rgb(9, 9, 9);
+  border: 1px solid #329d9c;
+  font-size: 16px;
+  box-shadow: 2px 2px 5px #205072;
+  border: 1px solid #7be495;
+  color: white;
+}
+.addSubForm > select {
+  background-color: rgb(9, 9, 9);
+  border: 1px solid #7be495;
+  box-shadow: 2px 2px 5px #205072;
+  font-size: 12px;
+  color: white;
 }
 
 .all-cards{
@@ -72,6 +88,10 @@ body{
   text-shadow: .5px .3px 1px #00061a;
 }
 
+.button:active {
+  transform: scale(.9);
+}
+
 .button-container {
   display: flex;
   justify-content: space-around;
@@ -84,17 +104,31 @@ body{
 }
 
 #categoryselect {
+  display: inline-block;
   margin-top: 0px;
   min-width: 18em;
-  padding: 0px 10px;
+  padding: 0px 5px;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
   border-radius: 4px;
-  transition: all 250ms ease-in-out;
   letter-spacing: 1px;
   height: 36px;
   margin-bottom: 1rem;
+  position: relative;
   color: #329d9c;
+  transform: scaleY(100%);
+}
+
+#categoryselect div,.select-selected {
+  background-color: #205072;
+  color: white;
+  padding: 10px 20px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .content {
@@ -105,7 +139,7 @@ body{
   justify-content: center;
   padding: 10px;
   background-color: #e67817;
-  box-shadow: 5px 5px 10px #763c0a;
+  box-shadow: 2px 5px 10px #763c0a;
   margin-top: 25%;
   transition: transform 1s;
   width: 100%;
@@ -117,13 +151,29 @@ body{
   transition-duration: 1s;
 }
 
+.deleteIcon {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  transform: scale(.8);
+}
+
+.deleteIcon:active {
+  transform: scale(.7);
+}
+
 .displayContainer {
   background-color: #00061a;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100%;
+
+}
+
+.displayBox-summ > h2 {
+  margin-bottom: 30px;
 }
 
 .displayBox-summ {
@@ -131,33 +181,37 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  width: 70%;
-  line-height: 1.8em;
+  width: 90%;
+  height: 90%;
   margin: 15px 5px 13px 10px;
+  border: 1px solid #7be495;
+  line-height: 1.8em;
   padding: 10px;
-  border-radius: 5px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-top: 1px solid #7be495;
+  border-bottom: 1px solid #7be495;
   float: left;
+  /* background-color: #00061a; */
+  background-color: #00061a;
+  color: white;
   font-size: 1em;
-  box-shadow: 5px 5px 10px #205072;
+  box-shadow: 2px 2px 5px #205072;
   cursor: pointer;
   overflow-wrap: break-word;
-  background: #7be495;
+  border-radius: 5px;
   p {
     padding: 5px;
   }
 }
 
-.displayBox:hover {
-  transform: scale(1.1, 1.1)
-}
-
 .displayBox {
   background-color: transparent;
   width: 300px;
-  height: 200px;
+  height: 150px;
   perspective: 1000px;
   margin: 10px;
-
+  margin-right: 9%;
   p {
     padding: 5px;
   }
@@ -190,19 +244,28 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: center;
   line-height: 2em;
   backface-visibility: hidden;
+  border: 1px solid white;
 }
 
 .displayBox-front {
-  background-color: #7be495;
-  color: black;
+  background-color: transparent;
+  box-shadow: 2px 2px 10px #205072;
+  border-color: #7be495;
+  color: white;
+}
+
+p > strong {
+  color: #329d9c;
 }
 
 .displayBox-back {
-  background-color: #7be495;
-  color: black;
+  background-color: transparent;
+  box-shadow: 2px 2px 5px #205072;
+  border-color: #7be495;
+  color: white;
   transform: rotateY(180deg);
 }
 
@@ -295,14 +358,11 @@ label {
 }
 
 #profile-pic {
-  width: 13%;
+  width: 17%;
   height: auto;
   border-radius: 50%;
   background-size: cover;
-  margin-right: 10px;
-  position: absolute;
-  right: px;
-  top: 12px;
+  border: 1px solid #00061a;
 }
 
 #signup-box{
@@ -333,13 +393,33 @@ label {
   margin-top: 10px;
 }
 
+.summary-container {
+ width: 100%;
+ display: flex;
+ justify-content: center;
+ background-color: #00061a;
+ border-radius: 5px;
+}
+
 #topcontainer {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 20%;
+  height: 30%;
   background-color: #040917;
-  margin-top: 5px;
+  margin-top: 20px;
+}
+
+.total {
+  padding: 0 0.5em;
+  color: #F57D15;
+  font-weight: 600;
+}
+
+.totalSumField{
+  display: inline-flex;
+  width: 100%;
+  justify-content: space-between;
 }
 
 #welcome {
@@ -354,6 +434,8 @@ label {
   width: 70%;
   height: 100%;
 }
+
+
 
 @media screen and (max-width: 520px) and (min-width: 375px) {
   html {
