Updated styling heavily, worked on DB patch/delete, continued to refactor code as necessary
Co-authored-by: Ahsan Ali <110138940+greyali@users.noreply.github.com>
Co-authored-by: Ed Cho <106274379+edcho720@users.noreply.github.com>
Co-authored-by: Sarah Moosa <74516787+Sbethm@users.noreply.github.com>
Co-authored-by: Joe Hynan <111455487+JoeH1020@users.noreply.github.com>

--- a/client/view/style.scss
+++ b/client/view/style.scss
@@ -146,11 +146,6 @@ body{
 
 }
 
-.content:hover {
-  transform: rotateZ(0.5deg);
-  transition-duration: 1s;
-}
-
 .deleteIcon {
   position: absolute;
   top: 5px;
@@ -279,6 +274,10 @@ p > strong {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.form-group > label {
+  color: #00061a
 }
 
 #home-logo {
